--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 
 </body>
 <head>
-<linkrel="stylesheet" href="styles.css>
-  <title>aluraflix</title>
+<linkrel="stylesheet" href="styles.css">
+  <title>Natanael</title>
 </head>
